# pinac_workspace

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json
.github/: pull_request_template.md
app/: electron-builder.json5  package-lock.json  package.json
app/electron/: main.ts
app/src/: App.tsx  index.tsx
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/: exceptions.py
backend/src/api/: app.py  dependencies.py  exception_handlers.py  schemas.py
backend/src/api/routes/: __init__.py  auth.py  health.py  llm.py
backend/src/config/: config.py  config.toml
backend/src/nexus/: exceptions.py
backend/src/nexus/api/: app.py  dependencies.py  exception_handlers.py  schemas.py
backend/src/nexus/api/routes/: __init__.py  health.py  llm.py
backend/src/nexus/config/: config.py  config.toml
backend/src/nexus/services/llm/: __init__.py  base.py  byok.py  exceptions.py  schemas.py
backend/src/nexus/services/llm/providers/: anthropic.py  gemini.py  openai.py
backend/src/services/llm/: __init__.py  base.py  byok.py  exceptions.py  service.py
backend/src/services/llm/providers/: __init__.py  anthropic.py  gemini.py  openai.py
desktop/: .gitignore  AGENTS.md  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  main.css
desktop/src-tauri/: Cargo.toml  config.toml  tauri.conf.json
docs/: THINKING_SUPPORT.md
src/: main.css
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/context/: ChatContext.tsx
src/hooks/: useChat.ts  useResizablePanel.ts
src/types/: index.ts
website/: AGENTS.md  README.md  package-lock.json  package.json
(+88 files in other folders)
