[project]
name = "nexus"
version = "0.1.0"
description = "Backend service for Pinac Workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "kitkat[all-providers]>=0.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
